// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body renders the about page 1`] = `
<div>
  <header
    class="sio__header"
  >
    <div
      class="sio__menu-container"
    >
      <div
        class="sio__menu-iching-small"
      >
        <div
          class="iching__container"
          style="height: 24px; width: 30px;"
        >
          <svg
            class="iching__svg"
            viewBox="0 0 15 12"
          >
            <g>
              <path
                d="M1,1 L5,1"
              />
              <path
                d="M10,1 L14,1"
              />
            </g>
            <g>
              <path
                d="M1,3 L5,3"
              />
              <path
                d="M10,3 L14,3"
              />
            </g>
            <g>
              <path
                d="M1,5 L7,5"
              />
              <path
                d="M8,5 L14,5"
              />
            </g>
            <g>
              <path
                d="M1,7 L7,7"
              />
              <path
                d="M8,7 L14,7"
              />
            </g>
            <g>
              <path
                d="M1,9 L5,9"
              />
              <path
                d="M10,9 L14,9"
              />
            </g>
            <g>
              <path
                d="M1,11 L7,11"
              />
              <path
                d="M8,11 L14,11"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </header>
  <main
    class="sio__main"
  >
    <section
      class="sio__name sio__name--hidden"
    >
      <img
        class="sio__image"
        src="static/prof.jpeg"
      />
      <h3
        class="sio__title"
      >
        Nick Senger
      </h3>
      <div
        class="sio__social-container"
      >
        <a
          class="sio__social-link"
          href="mailto:dev@nsenger.com"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 14.451l8-4.48V9.6c0-.88-.721-1.6-1.6-1.6H8.6C7.72 8 7 8.72 7 9.6v.371l8 4.48z"
              fill="currentColor"
            />
            <path
              d="M15 16.836l-8-4.96V20.4c0 .879.72 1.6 1.6 1.6h12.8c.879 0 1.6-.721 1.6-1.6v-8.525l-8 4.961z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://github.com/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 7.202a7.8 7.8 0 00-2.465 15.2c.39.072.532-.168.532-.375 0-.186-.007-.676-.011-1.327-2.169.472-2.627-1.046-2.627-1.046-.354-.9-.866-1.141-.866-1.141-.708-.484.053-.475.053-.475.783.056 1.195.805 1.195.805.696 1.191 1.826.848 2.27.648.071-.505.272-.849.495-1.043-1.732-.197-3.553-.866-3.553-3.855 0-.852.304-1.548.803-2.093-.08-.197-.348-.99.077-2.064 0 0 .655-.21 2.145.8a7.468 7.468 0 011.953-.263c.662.003 1.33.089 1.953.263 1.489-1.01 2.143-.8 2.143-.8.426 1.074.158 1.867.078 2.064.5.545.802 1.241.802 2.093 0 2.996-1.823 3.656-3.562 3.85.28.24.529.717.529 1.443 0 1.043-.01 1.885-.01 2.141 0 .208.141.451.537.375A7.802 7.802 0 0015 7.202z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://www.linkedin.com/in/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.814 7H8.181C7.529 7 7 7.517 7 8.153v13.692C7 22.482 7.529 23 8.181 23h13.633c.653 0 1.186-.518 1.186-1.154V8.153C23 7.517 22.467 7 21.814 7zM12 21h-2v-7h2v7zm-1-7.65a1.35 1.35 0 110-2.7 1.35 1.35 0 010 2.7zM20 21h-2v-3.195c0-.906-.498-1.77-1.52-1.77S15 16.721 15 17.738V21h-2v-7h2v1.261s.292-.861 2.057-.861C18.82 14.4 20 15.916 20 18.019V21z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </section>
    <section
      class="sio__about"
    >
      <p>
        I am a software engineer with several years of experience building scalable
             web & native applications using modern techniques. Some of my interests include:
             biotech, foreign language study, typed functional programming, and homebrewing.
             If you need technical assistance developing an app or project, feel free
             to reach out 
        <span
          class="sio__small-only"
        >
          .
        </span>
        <span
          class="sio__big-only"
        >
           using the form below:
        </span>
      </p>
    </section>
    <section
      class="sio__contact sio__contact--hidden"
    >
      <form
        action="/send-message-no-js"
        method="post"
      >
        <label>
          Return Email
          <input
            class="sio__email"
            name="email"
            type="email"
            value=""
          />
        </label>
        <label>
          Message
          <textarea
            class="sio__message"
            name="message"
          />
        </label>
        <button
          class="sio__submit-btn"
        >
          SUBMIT
        </button>
      </form>
    </section>
  </main>
  <div
    class="sio__burger-container"
  >
    <div
      class="sio__burger-panel"
    >
      <a
        class=""
        href="/home"
      >
        HOME
      </a>
      <a
        class=""
        href="/about"
      >
        ABOUT
      </a>
      <a
        class=""
        href="/contact"
      >
        CONTACT
      </a>
    </div>
  </div>
  <footer
    class="sio__footer"
  >
    <a
      class="sio__footer-link"
      href="/home"
    >
      <svg
        height="41.584"
        viewBox="0 0 12.418 11.002"
        width="46.934"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M1.688 10.725s-.01.277.26.277l3.13-.004.006-2.564s-.044-.423.366-.423h1.299c.485 0 .455.423.455.423l-.005 2.557h3.063c.345 0 .329-.346.329-.346V5.917L6.273 2.075 1.688 5.917v4.808"
          />
          <path
            d="M0 5.56s.39.717 1.238 0L6.31 1.267l4.757 4.264c.983.709 1.35 0 1.35 0L6.31 0 0 5.56M10.951 1.257H9.728l.006 1.484 1.217 1.033V1.257"
          />
        </g>
      </svg>
      HOME
    </a>
    <a
      class="sio__footer-link sio__footer-link--active"
      href="/about"
    >
      <svg
        height="46.181"
        viewBox="0 0 12.418 12.219"
        width="46.933"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M3.032 0H.474A.475.475 0 0 0 0 .475v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V.475A.475.475 0 0 0 3.032 0M7.437 0H4.88a.475.475 0 0 0-.474.475v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V.475A.475.475 0 0 0 7.437 0M11.944 0H9.387a.475.475 0 0 0-.474.475v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V.475A.475.475 0 0 0 11.944 0M3.032 4.307H.474A.474.474 0 0 0 0 4.781v2.557c0 .262.212.474.474.474h2.558a.474.474 0 0 0 .473-.474V4.781a.474.474 0 0 0-.473-.474M7.437 4.307H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M11.944 4.307H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M3.032 8.713H.474A.474.474 0 0 0 0 9.187v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V9.187a.474.474 0 0 0-.473-.474M7.437 8.713H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474M11.944 8.713H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474"
          />
        </g>
      </svg>
      ABOUT
    </a>
    <a
      class="sio__footer-link"
      href="/contact"
    >
      <svg
        height="64.092"
        viewBox="0 0 15.819 16.958"
        width="59.787"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M10.298 0L2.056 9.133l1.222 1.104 8.242-9.132L10.298 0M14.596 3.88l-8.242 9.132 1.222 1.103 8.243-9.132-1.223-1.104M11.825 1.379L3.582 10.51l2.467 2.226 8.243-9.131-2.467-2.227M.52 14.734L0 16.958l2.159-.744a2.273 2.273 0 0 0-1.639-1.48M.687 14.268A2.659 2.659 0 0 1 2.606 16l4.565-1.571-5.388-4.856-1.096 4.695"
          />
        </g>
      </svg>
      CONTACT
    </a>
  </footer>
  <div
    class="sio__loader sio__loader--hidden"
  >
    <div
      class="sio__spinner"
    >
      <div
        class="iching__container"
        style="height: 40px; width: 50px;"
      >
        <svg
          class="iching__svg"
          viewBox="0 0 15 12"
        >
          <g>
            <path
              d="M1,1 L5,1"
            />
            <path
              d="M10,1 L14,1"
            />
          </g>
          <g>
            <path
              d="M1,3 L5,3"
            />
            <path
              d="M10,3 L14,3"
            />
          </g>
          <g>
            <path
              d="M1,5 L5,5"
            />
            <path
              d="M10,5 L14,5"
            />
          </g>
          <g>
            <path
              d="M1,7 L7,7"
            />
            <path
              d="M8,7 L14,7"
            />
          </g>
          <g>
            <path
              d="M1,9 L7,9"
            />
            <path
              d="M8,9 L14,9"
            />
          </g>
          <g>
            <path
              d="M1,11 L7,11"
            />
            <path
              d="M8,11 L14,11"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Body renders the contact page 1`] = `
<div>
  <header
    class="sio__header"
  >
    <div
      class="sio__menu-container"
    >
      <div
        class="sio__menu-iching-small"
      >
        <div
          class="iching__container"
          style="height: 24px; width: 30px;"
        >
          <svg
            class="iching__svg"
            viewBox="0 0 15 12"
          >
            <g>
              <path
                d="M1,1 L7,1"
              />
              <path
                d="M8,1 L14,1"
              />
            </g>
            <g>
              <path
                d="M1,3 L7,3"
              />
              <path
                d="M8,3 L14,3"
              />
            </g>
            <g>
              <path
                d="M1,5 L7,5"
              />
              <path
                d="M8,5 L14,5"
              />
            </g>
            <g>
              <path
                d="M1,7 L5,7"
              />
              <path
                d="M10,7 L14,7"
              />
            </g>
            <g>
              <path
                d="M1,9 L5,9"
              />
              <path
                d="M10,9 L14,9"
              />
            </g>
            <g>
              <path
                d="M1,11 L5,11"
              />
              <path
                d="M10,11 L14,11"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </header>
  <main
    class="sio__main"
  >
    <section
      class="sio__name sio__name--hidden"
    >
      <img
        class="sio__image"
        src="static/prof.jpeg"
      />
      <h3
        class="sio__title"
      >
        Nick Senger
      </h3>
      <div
        class="sio__social-container"
      >
        <a
          class="sio__social-link"
          href="mailto:dev@nsenger.com"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 14.451l8-4.48V9.6c0-.88-.721-1.6-1.6-1.6H8.6C7.72 8 7 8.72 7 9.6v.371l8 4.48z"
              fill="currentColor"
            />
            <path
              d="M15 16.836l-8-4.96V20.4c0 .879.72 1.6 1.6 1.6h12.8c.879 0 1.6-.721 1.6-1.6v-8.525l-8 4.961z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://github.com/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 7.202a7.8 7.8 0 00-2.465 15.2c.39.072.532-.168.532-.375 0-.186-.007-.676-.011-1.327-2.169.472-2.627-1.046-2.627-1.046-.354-.9-.866-1.141-.866-1.141-.708-.484.053-.475.053-.475.783.056 1.195.805 1.195.805.696 1.191 1.826.848 2.27.648.071-.505.272-.849.495-1.043-1.732-.197-3.553-.866-3.553-3.855 0-.852.304-1.548.803-2.093-.08-.197-.348-.99.077-2.064 0 0 .655-.21 2.145.8a7.468 7.468 0 011.953-.263c.662.003 1.33.089 1.953.263 1.489-1.01 2.143-.8 2.143-.8.426 1.074.158 1.867.078 2.064.5.545.802 1.241.802 2.093 0 2.996-1.823 3.656-3.562 3.85.28.24.529.717.529 1.443 0 1.043-.01 1.885-.01 2.141 0 .208.141.451.537.375A7.802 7.802 0 0015 7.202z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://www.linkedin.com/in/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.814 7H8.181C7.529 7 7 7.517 7 8.153v13.692C7 22.482 7.529 23 8.181 23h13.633c.653 0 1.186-.518 1.186-1.154V8.153C23 7.517 22.467 7 21.814 7zM12 21h-2v-7h2v7zm-1-7.65a1.35 1.35 0 110-2.7 1.35 1.35 0 010 2.7zM20 21h-2v-3.195c0-.906-.498-1.77-1.52-1.77S15 16.721 15 17.738V21h-2v-7h2v1.261s.292-.861 2.057-.861C18.82 14.4 20 15.916 20 18.019V21z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </section>
    <section
      class="sio__about sio__about--hidden"
    >
      <p>
        I am a software engineer with several years of experience building scalable
             web & native applications using modern techniques. Some of my interests include:
             biotech, foreign language study, typed functional programming, and homebrewing.
             If you need technical assistance developing an app or project, feel free
             to reach out 
        <span
          class="sio__small-only"
        >
          .
        </span>
        <span
          class="sio__big-only"
        >
           using the form below:
        </span>
      </p>
    </section>
    <section
      class="sio__contact"
    >
      <form
        action="/send-message-no-js"
        method="post"
      >
        <label>
          Return Email
          <input
            class="sio__email"
            name="email"
            type="email"
            value=""
          />
        </label>
        <label>
          Message
          <textarea
            class="sio__message"
            name="message"
          />
        </label>
        <button
          class="sio__submit-btn"
        >
          SUBMIT
        </button>
      </form>
    </section>
  </main>
  <div
    class="sio__burger-container"
  >
    <div
      class="sio__burger-panel"
    >
      <a
        class=""
        href="/home"
      >
        HOME
      </a>
      <a
        class=""
        href="/about"
      >
        ABOUT
      </a>
      <a
        class=""
        href="/contact"
      >
        CONTACT
      </a>
    </div>
  </div>
  <footer
    class="sio__footer"
  >
    <a
      class="sio__footer-link"
      href="/home"
    >
      <svg
        height="41.584"
        viewBox="0 0 12.418 11.002"
        width="46.934"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M1.688 10.725s-.01.277.26.277l3.13-.004.006-2.564s-.044-.423.366-.423h1.299c.485 0 .455.423.455.423l-.005 2.557h3.063c.345 0 .329-.346.329-.346V5.917L6.273 2.075 1.688 5.917v4.808"
          />
          <path
            d="M0 5.56s.39.717 1.238 0L6.31 1.267l4.757 4.264c.983.709 1.35 0 1.35 0L6.31 0 0 5.56M10.951 1.257H9.728l.006 1.484 1.217 1.033V1.257"
          />
        </g>
      </svg>
      HOME
    </a>
    <a
      class="sio__footer-link"
      href="/about"
    >
      <svg
        height="46.181"
        viewBox="0 0 12.418 12.219"
        width="46.933"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M3.032 0H.474A.475.475 0 0 0 0 .475v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V.475A.475.475 0 0 0 3.032 0M7.437 0H4.88a.475.475 0 0 0-.474.475v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V.475A.475.475 0 0 0 7.437 0M11.944 0H9.387a.475.475 0 0 0-.474.475v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V.475A.475.475 0 0 0 11.944 0M3.032 4.307H.474A.474.474 0 0 0 0 4.781v2.557c0 .262.212.474.474.474h2.558a.474.474 0 0 0 .473-.474V4.781a.474.474 0 0 0-.473-.474M7.437 4.307H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M11.944 4.307H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M3.032 8.713H.474A.474.474 0 0 0 0 9.187v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V9.187a.474.474 0 0 0-.473-.474M7.437 8.713H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474M11.944 8.713H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474"
          />
        </g>
      </svg>
      ABOUT
    </a>
    <a
      class="sio__footer-link sio__footer-link--active"
      href="/contact"
    >
      <svg
        height="64.092"
        viewBox="0 0 15.819 16.958"
        width="59.787"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M10.298 0L2.056 9.133l1.222 1.104 8.242-9.132L10.298 0M14.596 3.88l-8.242 9.132 1.222 1.103 8.243-9.132-1.223-1.104M11.825 1.379L3.582 10.51l2.467 2.226 8.243-9.131-2.467-2.227M.52 14.734L0 16.958l2.159-.744a2.273 2.273 0 0 0-1.639-1.48M.687 14.268A2.659 2.659 0 0 1 2.606 16l4.565-1.571-5.388-4.856-1.096 4.695"
          />
        </g>
      </svg>
      CONTACT
    </a>
  </footer>
  <div
    class="sio__loader sio__loader--hidden"
  >
    <div
      class="sio__spinner"
    >
      <div
        class="iching__container"
        style="height: 40px; width: 50px;"
      >
        <svg
          class="iching__svg"
          viewBox="0 0 15 12"
        >
          <g>
            <path
              d="M1,1 L5,1"
            />
            <path
              d="M10,1 L14,1"
            />
          </g>
          <g>
            <path
              d="M1,3 L5,3"
            />
            <path
              d="M10,3 L14,3"
            />
          </g>
          <g>
            <path
              d="M1,5 L5,5"
            />
            <path
              d="M10,5 L14,5"
            />
          </g>
          <g>
            <path
              d="M1,7 L5,7"
            />
            <path
              d="M10,7 L14,7"
            />
          </g>
          <g>
            <path
              d="M1,9 L5,9"
            />
            <path
              d="M10,9 L14,9"
            />
          </g>
          <g>
            <path
              d="M1,11 L5,11"
            />
            <path
              d="M10,11 L14,11"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Body renders the home page 1`] = `
<div>
  <header
    class="sio__header"
  >
    <div
      class="sio__menu-container"
    >
      <div
        class="sio__menu-iching-small"
      >
        <div
          class="iching__container"
          style="height: 24px; width: 30px;"
        >
          <svg
            class="iching__svg"
            viewBox="0 0 15 12"
          >
            <g>
              <path
                d="M1,1 L7,1"
              />
              <path
                d="M8,1 L14,1"
              />
            </g>
            <g>
              <path
                d="M1,3 L5,3"
              />
              <path
                d="M10,3 L14,3"
              />
            </g>
            <g>
              <path
                d="M1,5 L7,5"
              />
              <path
                d="M8,5 L14,5"
              />
            </g>
            <g>
              <path
                d="M1,7 L5,7"
              />
              <path
                d="M10,7 L14,7"
              />
            </g>
            <g>
              <path
                d="M1,9 L5,9"
              />
              <path
                d="M10,9 L14,9"
              />
            </g>
            <g>
              <path
                d="M1,11 L7,11"
              />
              <path
                d="M8,11 L14,11"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </header>
  <main
    class="sio__main"
  >
    <section
      class="sio__name"
    >
      <img
        class="sio__image"
        src="static/prof.jpeg"
      />
      <h3
        class="sio__title"
      >
        Nick Senger
      </h3>
      <div
        class="sio__social-container"
      >
        <a
          class="sio__social-link"
          href="mailto:dev@nsenger.com"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 14.451l8-4.48V9.6c0-.88-.721-1.6-1.6-1.6H8.6C7.72 8 7 8.72 7 9.6v.371l8 4.48z"
              fill="currentColor"
            />
            <path
              d="M15 16.836l-8-4.96V20.4c0 .879.72 1.6 1.6 1.6h12.8c.879 0 1.6-.721 1.6-1.6v-8.525l-8 4.961z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://github.com/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 7.202a7.8 7.8 0 00-2.465 15.2c.39.072.532-.168.532-.375 0-.186-.007-.676-.011-1.327-2.169.472-2.627-1.046-2.627-1.046-.354-.9-.866-1.141-.866-1.141-.708-.484.053-.475.053-.475.783.056 1.195.805 1.195.805.696 1.191 1.826.848 2.27.648.071-.505.272-.849.495-1.043-1.732-.197-3.553-.866-3.553-3.855 0-.852.304-1.548.803-2.093-.08-.197-.348-.99.077-2.064 0 0 .655-.21 2.145.8a7.468 7.468 0 011.953-.263c.662.003 1.33.089 1.953.263 1.489-1.01 2.143-.8 2.143-.8.426 1.074.158 1.867.078 2.064.5.545.802 1.241.802 2.093 0 2.996-1.823 3.656-3.562 3.85.28.24.529.717.529 1.443 0 1.043-.01 1.885-.01 2.141 0 .208.141.451.537.375A7.802 7.802 0 0015 7.202z"
              fill="currentColor"
            />
          </svg>
        </a>
        <a
          class="sio__social-link"
          href="https://www.linkedin.com/in/nicksenger"
        >
          <svg
            height="25"
            viewBox="0 0 30 30"
            width="25"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21.814 7H8.181C7.529 7 7 7.517 7 8.153v13.692C7 22.482 7.529 23 8.181 23h13.633c.653 0 1.186-.518 1.186-1.154V8.153C23 7.517 22.467 7 21.814 7zM12 21h-2v-7h2v7zm-1-7.65a1.35 1.35 0 110-2.7 1.35 1.35 0 010 2.7zM20 21h-2v-3.195c0-.906-.498-1.77-1.52-1.77S15 16.721 15 17.738V21h-2v-7h2v1.261s.292-.861 2.057-.861C18.82 14.4 20 15.916 20 18.019V21z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
    </section>
    <section
      class="sio__about sio__about--hidden"
    >
      <p>
        I am a software engineer with several years of experience building scalable
             web & native applications using modern techniques. Some of my interests include:
             biotech, foreign language study, typed functional programming, and homebrewing.
             If you need technical assistance developing an app or project, feel free
             to reach out 
        <span
          class="sio__small-only"
        >
          .
        </span>
        <span
          class="sio__big-only"
        >
           using the form below:
        </span>
      </p>
    </section>
    <section
      class="sio__contact sio__contact--hidden"
    >
      <form
        action="/send-message-no-js"
        method="post"
      >
        <label>
          Return Email
          <input
            class="sio__email"
            name="email"
            type="email"
            value=""
          />
        </label>
        <label>
          Message
          <textarea
            class="sio__message"
            name="message"
          />
        </label>
        <button
          class="sio__submit-btn"
        >
          SUBMIT
        </button>
      </form>
    </section>
  </main>
  <div
    class="sio__burger-container"
  >
    <div
      class="sio__burger-panel"
    >
      <a
        class=""
        href="/home"
      >
        HOME
      </a>
      <a
        class=""
        href="/about"
      >
        ABOUT
      </a>
      <a
        class=""
        href="/contact"
      >
        CONTACT
      </a>
    </div>
  </div>
  <footer
    class="sio__footer"
  >
    <a
      class="sio__footer-link sio__footer-link--active"
      href="/home"
    >
      <svg
        height="41.584"
        viewBox="0 0 12.418 11.002"
        width="46.934"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M1.688 10.725s-.01.277.26.277l3.13-.004.006-2.564s-.044-.423.366-.423h1.299c.485 0 .455.423.455.423l-.005 2.557h3.063c.345 0 .329-.346.329-.346V5.917L6.273 2.075 1.688 5.917v4.808"
          />
          <path
            d="M0 5.56s.39.717 1.238 0L6.31 1.267l4.757 4.264c.983.709 1.35 0 1.35 0L6.31 0 0 5.56M10.951 1.257H9.728l.006 1.484 1.217 1.033V1.257"
          />
        </g>
      </svg>
      HOME
    </a>
    <a
      class="sio__footer-link"
      href="/about"
    >
      <svg
        height="46.181"
        viewBox="0 0 12.418 12.219"
        width="46.933"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M3.032 0H.474A.475.475 0 0 0 0 .475v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V.475A.475.475 0 0 0 3.032 0M7.437 0H4.88a.475.475 0 0 0-.474.475v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V.475A.475.475 0 0 0 7.437 0M11.944 0H9.387a.475.475 0 0 0-.474.475v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V.475A.475.475 0 0 0 11.944 0M3.032 4.307H.474A.474.474 0 0 0 0 4.781v2.557c0 .262.212.474.474.474h2.558a.474.474 0 0 0 .473-.474V4.781a.474.474 0 0 0-.473-.474M7.437 4.307H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M11.944 4.307H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.474.474.474h2.557a.474.474 0 0 0 .474-.474V4.781a.474.474 0 0 0-.474-.474M3.032 8.713H.474A.474.474 0 0 0 0 9.187v2.557c0 .262.212.475.474.475h2.558a.474.474 0 0 0 .473-.475V9.187a.474.474 0 0 0-.473-.474M7.437 8.713H4.88a.474.474 0 0 0-.474.474v2.557c0 .262.213.475.474.475h2.557a.474.474 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474M11.944 8.713H9.387a.474.474 0 0 0-.474.474v2.557c0 .262.212.475.474.475h2.557a.475.475 0 0 0 .474-.475V9.187a.474.474 0 0 0-.474-.474"
          />
        </g>
      </svg>
      ABOUT
    </a>
    <a
      class="sio__footer-link"
      href="/contact"
    >
      <svg
        height="64.092"
        viewBox="0 0 15.819 16.958"
        width="59.787"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M10.298 0L2.056 9.133l1.222 1.104 8.242-9.132L10.298 0M14.596 3.88l-8.242 9.132 1.222 1.103 8.243-9.132-1.223-1.104M11.825 1.379L3.582 10.51l2.467 2.226 8.243-9.131-2.467-2.227M.52 14.734L0 16.958l2.159-.744a2.273 2.273 0 0 0-1.639-1.48M.687 14.268A2.659 2.659 0 0 1 2.606 16l4.565-1.571-5.388-4.856-1.096 4.695"
          />
        </g>
      </svg>
      CONTACT
    </a>
  </footer>
  <div
    class="sio__loader sio__loader--hidden"
  >
    <div
      class="sio__spinner"
    >
      <div
        class="iching__container"
        style="height: 40px; width: 50px;"
      >
        <svg
          class="iching__svg"
          viewBox="0 0 15 12"
        >
          <g>
            <path
              d="M1,1 L5,1"
            />
            <path
              d="M10,1 L14,1"
            />
          </g>
          <g>
            <path
              d="M1,3 L5,3"
            />
            <path
              d="M10,3 L14,3"
            />
          </g>
          <g>
            <path
              d="M1,5 L7,5"
            />
            <path
              d="M8,5 L14,5"
            />
          </g>
          <g>
            <path
              d="M1,7 L7,7"
            />
            <path
              d="M8,7 L14,7"
            />
          </g>
          <g>
            <path
              d="M1,9 L5,9"
            />
            <path
              d="M10,9 L14,9"
            />
          </g>
          <g>
            <path
              d="M1,11 L7,11"
            />
            <path
              d="M8,11 L14,11"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
